--- a/Lecture_7/lecture_7.ipynb
+++ b/Lecture_7/lecture_7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -69,11 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install -r requirements.txt"
+    "#!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conda install -c conda-forge selenium"
    ]
   },
   {
@@ -86,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
@@ -122,21 +133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'webdriver' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m driver \u001b[38;5;241m=\u001b[39m webdriver\u001b[38;5;241m.\u001b[39mChrome()\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# driver = webdriver.Firefox()\u001b[39;00m\n\u001b[0;32m      3\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://resultadoshistorico.onpe.gob.pe/EG2021/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'webdriver' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
     "# driver = webdriver.Firefox()\n",
@@ -178,17 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title:  Presentación de Resultados Elecciones Generales y Parlamento Andino 2021\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Access to the title\n",
     "print('Title: ', driver.title)"
@@ -196,17 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Page URL:  https://resultadoshistorico.onpe.gob.pe/EG2021/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Access to the curent url \n",
     "print('Current Page URL: ', driver.current_url)"
@@ -440,9 +423,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'webdriver' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#driver = webdriver.Firefox()\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m driver \u001b[38;5;241m=\u001b[39m webdriver\u001b[38;5;241m.\u001b[39mChrome()\n\u001b[0;32m      3\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.kaspersky.com/resource-center/definitions/cookies\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      4\u001b[0m driver\u001b[38;5;241m.\u001b[39mget( url )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'webdriver' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#driver = webdriver.Firefox()\n",
     "driver = webdriver.Chrome()\n",
@@ -770,11 +765,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'webdriver' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m driver \u001b[38;5;241m=\u001b[39m webdriver\u001b[38;5;241m.\u001b[39mChrome( ChromeDriverManager()\u001b[38;5;241m.\u001b[39minstall() )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'webdriver' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# driver = webdriver.Chrome( ChromeDriverManager().install() )\n",
+    "driver = webdriver.Chrome( ChromeDriverManager().install() )\n",
     "# driver.maximize_window()\n",
     "\n",
     "# url_1 = \"https://resultadoshistorico.onpe.gob.pe/EG2021/\"\n",
@@ -784,14 +791,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'webdriver' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#driver = webdriver.Firefox()\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m driver \u001b[38;5;241m=\u001b[39m webdriver\u001b[38;5;241m.\u001b[39mChrome()\n\u001b[0;32m      4\u001b[0m url_1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://resultadoshistorico.onpe.gob.pe/EG2021/\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m driver\u001b[38;5;241m.\u001b[39mget( url_1 )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'webdriver' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#driver = webdriver.Firefox()\n",
     "driver = webdriver.Chrome()\n",
-    "\n",
-    "\n",
     "\n",
     "url_1 = \"https://resultadoshistorico.onpe.gob.pe/EG2021/\"\n",
     "driver.get( url_1 )\n",
@@ -811,21 +828,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidSessionIdException",
-     "evalue": "Message: invalid session id: session deleted as the browser has closed the connection\nfrom disconnected: not connected to DevTools\n  (Session info: chrome=139.0.7258.155)\nStacktrace:\n\tGetHandleVerifier [0x0x7ff753583d85+79397]\n\tGetHandleVerifier [0x0x7ff753583de0+79488]\n\t(No symbol) [0x0x7ff75332c0fa]\n\t(No symbol) [0x0x7ff753318355]\n\t(No symbol) [0x0x7ff75333ceee]\n\t(No symbol) [0x0x7ff7533b27c5]\n\t(No symbol) [0x0x7ff7533d2c72]\n\t(No symbol) [0x0x7ff7533aaf73]\n\t(No symbol) [0x0x7ff7533741b1]\n\t(No symbol) [0x0x7ff753374f43]\n\tGetHandleVerifier [0x0x7ff75384e1ed+3005069]\n\tGetHandleVerifier [0x0x7ff75384831d+2980797]\n\tGetHandleVerifier [0x0x7ff753867e0d+3110573]\n\tGetHandleVerifier [0x0x7ff75359d6de+184190]\n\tGetHandleVerifier [0x0x7ff7535a516f+215567]\n\tGetHandleVerifier [0x0x7ff75358c974+115220]\n\tGetHandleVerifier [0x0x7ff75358cb29+115657]\n\tGetHandleVerifier [0x0x7ff753573268+11016]\n\tBaseThreadInitThunk [0x0x7ffa5426e8d7+23]\n\tRtlUserThreadStart [0x0x7ffa5507c34c+44]\n",
+     "ename": "NameError",
+     "evalue": "name 'driver' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mInvalidSessionIdException\u001b[39m                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[100]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdriver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43murl_1\u001b[49m\u001b[43m \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m driver.maximize_window()\n\u001b[32m      3\u001b[39m time.sleep(\u001b[32m1\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Usuario\\anaconda3\\envs\\selenium_env\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:363\u001b[39m, in \u001b[36mWebDriver.get\u001b[39m\u001b[34m(self, url)\u001b[39m\n\u001b[32m    361\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url: \u001b[38;5;28mstr\u001b[39m) -> \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    362\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Loads a web page in the current browser session.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[43m.\u001b[49m\u001b[43mGET\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43murl\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Usuario\\anaconda3\\envs\\selenium_env\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:354\u001b[39m, in \u001b[36mWebDriver.execute\u001b[39m\u001b[34m(self, driver_command, params)\u001b[39m\n\u001b[32m    352\u001b[39m response = \u001b[38;5;28mself\u001b[39m.command_executor.execute(driver_command, params)\n\u001b[32m    353\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[32m--> \u001b[39m\u001b[32m354\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43merror_handler\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    355\u001b[39m     response[\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mself\u001b[39m._unwrap_value(response.get(\u001b[33m\"\u001b[39m\u001b[33mvalue\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[32m    356\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Usuario\\anaconda3\\envs\\selenium_env\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[39m, in \u001b[36mErrorHandler.check_response\u001b[39m\u001b[34m(self, response)\u001b[39m\n\u001b[32m    227\u001b[39m         alert_text = value[\u001b[33m\"\u001b[39m\u001b[33malert\u001b[39m\u001b[33m\"\u001b[39m].get(\u001b[33m\"\u001b[39m\u001b[33mtext\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    228\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m229\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[31mInvalidSessionIdException\u001b[39m: Message: invalid session id: session deleted as the browser has closed the connection\nfrom disconnected: not connected to DevTools\n  (Session info: chrome=139.0.7258.155)\nStacktrace:\n\tGetHandleVerifier [0x0x7ff753583d85+79397]\n\tGetHandleVerifier [0x0x7ff753583de0+79488]\n\t(No symbol) [0x0x7ff75332c0fa]\n\t(No symbol) [0x0x7ff753318355]\n\t(No symbol) [0x0x7ff75333ceee]\n\t(No symbol) [0x0x7ff7533b27c5]\n\t(No symbol) [0x0x7ff7533d2c72]\n\t(No symbol) [0x0x7ff7533aaf73]\n\t(No symbol) [0x0x7ff7533741b1]\n\t(No symbol) [0x0x7ff753374f43]\n\tGetHandleVerifier [0x0x7ff75384e1ed+3005069]\n\tGetHandleVerifier [0x0x7ff75384831d+2980797]\n\tGetHandleVerifier [0x0x7ff753867e0d+3110573]\n\tGetHandleVerifier [0x0x7ff75359d6de+184190]\n\tGetHandleVerifier [0x0x7ff7535a516f+215567]\n\tGetHandleVerifier [0x0x7ff75358c974+115220]\n\tGetHandleVerifier [0x0x7ff75358cb29+115657]\n\tGetHandleVerifier [0x0x7ff753573268+11016]\n\tBaseThreadInitThunk [0x0x7ffa5426e8d7+23]\n\tRtlUserThreadStart [0x0x7ffa5507c34c+44]\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m driver\u001b[38;5;241m.\u001b[39mget( url_1 )\n\u001b[0;32m      2\u001b[0m driver\u001b[38;5;241m.\u001b[39mmaximize_window()\n\u001b[0;32m      3\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'driver' is not defined"
      ]
     }
    ],
