#1831 update part 1 with Jazmin task

--- a/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_07_assignment3_2025/Trabajo_ Group_07_assignment3_2025.ipynb
@@ -9,52 +9,243 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68f54045-b560-43b0-ac08-f6b9a1d592f4",
+   "cell_type": "markdown",
+   "id": "03516e3d-70f2-4465-80a7-774767bd7cf7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 1. Pass Statement"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4cae2c90-82a7-4a3e-8f54-7fe63eabc63c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(1, 11):\n",
+    "    if num % 2 == 0:\n",
+    "        pass  # no hacer nada si es par\n",
+    "    else:\n",
+    "        print(num)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1875188-0c73-422e-8478-2496c7592df8",
+   "cell_type": "markdown",
+   "id": "98589377-ab07-4734-a4ec-2879071108d6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### ¿Qué pasaría si eliminas la sentencia pass?\n",
+    "Si eliminas pass, el código aún funcionaría igual si no hay ningún otro código dentro del if.\n",
+    "pass es una instrucción vacía que evita errores de sintaxis cuando se necesita un bloque pero no se desea ejecutar nada."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d60e0eec-cc2b-4259-8905-fcd570710912",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(1, 11):\n",
+    "    if num % 2 == 0:\n",
+    "        # pass is not required if nothing follows\n",
+    "        continue  # or just leave it empty\n",
+    "    print(num)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c3392fd-cb1f-4682-8b83-30407d8abbd6",
+   "cell_type": "markdown",
+   "id": "1ebf3f9c-c1a7-4dd4-a2f6-5243e4ecbb11",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 2. Continue Statement"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0d4551e4-c478-4e5b-97d6-39f37488938b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "n\n",
+      "l\n",
+      "p\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "for char in \"pythonloops\":\n",
+    "    if char == \"o\":\n",
+    "        continue\n",
+    "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb7371ac-45a5-43f1-94da-5b3213e78c0c",
+   "metadata": {},
+   "source": [
+    "#### ¿Cómo lograrías el mismo resultado sin usar continue?\n",
+    "Puedes invertir la lógica del if y usar una condición if directamente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5d754561-f775-440f-8420-a576deb037fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "n\n",
+      "l\n",
+      "p\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "for char in \"pythonloops\":\n",
+    "    if char != \"o\":\n",
+    "        print(char)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c889b08-a33b-490c-9db0-5a0c14301a7d",
+   "metadata": {},
+   "source": [
+    "#### Break Statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "29dce377-586c-47bb-869d-a2e2b51bae4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (número negativo para salir):  -8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número negativo detectado. Saliendo del bucle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    num = int(input(\"Ingresa un número (número negativo para salir): \"))\n",
+    "    if num < 0:\n",
+    "        print(\"Número negativo detectado. Saliendo del bucle.\")\n",
+    "        break\n",
+    "    print(f\"Ingresaste: {num}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba671407-0549-45be-ad71-4eb917969517",
+   "metadata": {},
+   "source": [
+    "#### ¿Cómo puedes modificar el bucle para que ignore los números negativos en lugar de romperse?\n",
+    "Puedes usar continue para simplemente ignorar los negativos sin terminar el bucle:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5aca33f3-38d6-4afc-a33e-56c1c39686a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (999 para salir):  999\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salida solicitada con 999.\n",
+      "\n",
+      "Fuera del bucle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    num = int(input(\"Ingresa un número (999 para salir): \"))\n",
+    "\n",
+    "    if num == 999:\n",
+    "        # Salida manual del bucle\n",
+    "        print(\"Salida solicitada con 999.\\n\")\n",
+    "        break\n",
+    "\n",
+    "    if num < 0:\n",
+    "        # Comentario: número negativo ignorado\n",
+    "        print(\"Número negativo ignorado.\\n\")\n",
+    "        continue\n",
+    "\n",
+    "    elif num == 3:\n",
+    "        #num = num + 1\n",
+    "        print(f\"Este número es {num} (caso especial)\\n\")\n",
+    "\n",
+    "    else:\n",
+    "        #num = num + 2\n",
+    "        print(\"Número diferente\\n\")\n",
+    "\n",
+    "    print(\"Número ingresado: \" + str(num), \"\\n\")\n",
+    "\n",
+    "print(\"Fuera del bucle.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,15 +260,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "08536026-b789-452e-a65f-f1501b2add30",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Dime un número: 10\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Has ingresado un valor no válido\n"
+      "El resultado es =  10.0\n"
      ]
     }
    ],
@@ -95,10 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "b08ba394-f488-48c1-bcb7-8268f54411f2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Dime un número: hola\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -121,15 +326,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "dcfb163d-f993-4542-b518-b7c3a56968f1",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Dime un número: 0\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Has ingresado un valor no válido\n"
+      "No se puede dividir entre 0 :(\n"
      ]
     }
    ],
@@ -155,16 +367,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "942b1dbe-37d8-40fa-9410-7414517b56e4",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Dime un número:  hola grupo 7 \n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Debes ingresar un número válido, intenta de nuevo.\n",
-      "El resultado es = 20.0\n"
+      "Debes ingresar un número válido, intenta de nuevo.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Dime un número:  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado es = 14.285714285714286\n"
      ]
     }
    ],
@@ -613,9 +845,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -627,7 +859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
