--- a/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
@@ -128,16 +128,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0953b4a2-fb37-4549-b830-608836ae7559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has introducido el número: 2.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has introducido el número: 4.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  6.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has introducido el número: 6.5\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  -5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha introducido un número negativo. El programa ha terminado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Break Statement Ulises\n",
+    "#Write a while loop that keeps asking the user to input numbers\n",
+    "#Break the loop if the user enters a negative number\n",
+    "while True:\n",
+    "    numero_chr = input(\"Por favor, introduce un número: \") #Se guarda str porque input siempre devuelve en formato cadena de caracteres\n",
+    "    numero = float(numero_chr) #Se convierte al formato float porque alguien puede introducir un decimal\n",
+    "    \n",
+    "    if numero < 0:\n",
+    "        print(\"Se ha introducido un número negativo. El programa ha terminado.\")\n",
+    "        break  # Interrumpe el bucle\n",
+    "    \n",
+    "    print(f\"Has introducido el número: {numero}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beeb4a24-a6c5-4c66-8bf4-e3bc5ef649ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3. Break Statement Ulises\n",
-    "#Write a while loop that keeps asking the user to input numbers.\n",
+    "#Re-question: How can you modify the loop so it ignores negative numbers instead of breaking?\n",
+    "#Agrego una línea al código\n",
+    "while True:\n",
+    "    numero_chr = input(\"Por favor, introduce un número: \") #Se guarda str porque input siempre devuelve en formato cadena de caracteres\n",
+    "    numero = float(numero_chr) #Se convierte al formato float porque alguien puede introducir un decimal\n",
     "\n",
-    "#Break the loop if the user enters a negative number.\n",
-    "#Re-question: How can you modify the loop so it ignores negative numbers instead of breaking?"
+    "    if numero < 0:\n",
+    "        print(\"Número negativo ignorado. Intenta otra vez.\")\n",
+    "        continue  #Agregado: Salto el resto del bucle y vuelve a pedir un número\n",
+    "    \n",
+    "    print(f\"Has introducido el número: {numero}\")"
    ]
   },
   {
@@ -261,22 +345,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b539ec3-ff65-4f44-ba35-a5f5820f3904",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15, 3, 8.2)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Part 2: Functions Ulises\n",
     "#6. Function with Multiple Returns\n",
-    "#Write a function analyze_numbers(lst) that takes a list of numbers and returns:\n",
+    "#Write a function analyze_numbers(lst) that takes a list of numbers and returns: #the maximum, the minimum and the average value\n",
+    "def analyze_numbers(lst):\n",
+    "    max_val = max(lst)\n",
+    "    min_val = min(lst)\n",
+    "    promedio_val = sum(lst) / len(lst)\n",
+    "    return max_val, min_val, promedio_val \n",
     "\n",
-    "#The maximum value\n",
+    "# Ejemplo\n",
+    "analyze_numbers([5, 10, 3, 8, 15]) #Solo devuelve los resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fa7f9c8a-3b9b-4bb7-9356-7e8cb5e5596f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lista analizada es: [15, 20, 35, 42, 58, 65]\n",
+      "El valor máximo es: 65\n",
+      "El valor mínimo es: 15\n",
+      "El valor promedio es: 39.166666666666664\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Re-question: How would you call this function and unpack the results into three variables?\n",
+    "#1. Define la lista de números en formato tupla\n",
+    "datos = [15, 20, 35, 42, 58, 65]\n",
     "\n",
-    "#The minimum value\n",
+    "#2. Llama a la función y asigna los resultados a tres variables\n",
+    "max_val, min_val, promedio_val = analyze_numbers(datos) #Ahora son variables con las que podemos trabajar\n",
     "\n",
-    "#The average value\n",
-    "\n",
-    "#Re-question: How would you call this function and unpack the results into three variables?"
+    "print(f\"La lista analizada es: {datos}\")\n",
+    "print(f\"El valor máximo es: {max_val}\")\n",
+    "print(f\"El valor mínimo es: {min_val}\")\n",
+    "print(f\"El valor promedio es: {promedio_val}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5cca7917-d100-4b24-b0ae-ab29b931350b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(65, 15, 39.166666666666664)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Comprobamos que sean variables\n",
+    "max_val, min_val, promedio_val"
    ]
   },
   {
@@ -358,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b7c178b0-72d8-40cb-99cc-9c59259ef3bd",
    "metadata": {},
    "outputs": [],
@@ -366,9 +514,39 @@
     "#Part 3: Classes Ulises\n",
     "#9. Class with Attributes and Methods\n",
     "#Define a class Car with attributes brand, model, and year.\n",
+    "class Car:\n",
+    "    def __init__(self, brand, model, year):\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
     "\n",
-    "#Add a method display_info() that prints the car’s details.\n",
-    "#Re-question: Create two car objects and call the method for each one."
+    "    def display_info(self):\n",
+    "        print(f\"Marca: {self.brand}. Modelo: {self.model}. Año: {self.year}\") #No arroja resultado aún"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b60b605a-6e8f-4203-8154-dc862d43f355",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marca: DFSK. Modelo: Glory. Año: 2022\n",
+      "Marca: Tesla. Modelo: Model Y. Año: 2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Re-question: Create two car objects and call the method for each one.\n",
+    "#Ejemplo:\n",
+    "mi_suv1 = Car(\"DFSK\", \"Glory\", 2022)\n",
+    "mi_suv2 = Car(\"Tesla\", \"Model Y\", 2025)\n",
+    "\n",
+    "mi_suv1.display_info() # Salida\n",
+    "mi_suv2.display_info() #Salida"
    ]
   },
   {
@@ -418,9 +596,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -432,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
