--- a/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_09_assignment3_2025.ipynb
@@ -209,7 +209,36 @@
    "execution_count": null,
    "id": "beeb4a24-a6c5-4c66-8bf4-e3bc5ef649ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  25\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Has introducido el número: 25.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Por favor, introduce un número:  -777\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número negativo ignorado. Intenta otra vez.\n"
+     ]
+    }
+   ],
    "source": [
     "#Re-question: How can you modify the loop so it ignores negative numbers instead of breaking?\n",
     "#Agrego una línea al código\n",
